--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -7,11 +7,11 @@ services:
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_DB: ${DB_NAME}
     ports:
-      - "${DB_PORT}:5432"
+      - '${DB_PORT}:5432'
     volumes:
       - db_data_dev:/var/lib/postgresql
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${DB_USER}"]
+      test: ['CMD-SHELL', 'pg_isready -U ${DB_USER}']
       interval: 5s
       timeout: 3s
       retries: 10
@@ -25,7 +25,7 @@ services:
       - .:/app
       - /app/node_modules
     ports:
-      - "${APP_PORT}:3000"
+      - '${APP_PORT}:3000'
     environment:
       NODE_ENV: development
       DATABASE_URL: postgres://${DB_USER}:${DB_PASSWORD}@db:5432/${DB_NAME}
