--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - db_data:/var/lib/postgresql
     restart: unless-stopped
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${DB_USER}"]
+      test: ['CMD-SHELL', 'pg_isready -U ${DB_USER}']
       interval: 10s
       timeout: 5s
       retries: 10
@@ -25,14 +25,13 @@ services:
       DATABASE_URL: postgres://${DB_USER}:${DB_PASSWORD}@db:5432/${DB_NAME}
       APP_PORT: ${APP_PORT}
     ports:
-      - "${APP_PORT}:${APP_PORT}"
+      - '${APP_PORT}:${APP_PORT}'
     depends_on:
       db:
         condition: service_healthy
     restart: always
     healthcheck:
-      test:
-        ["CMD-SHELL", "wget -qO- http://localhost:${APP_PORT}/health || exit 1"]
+      test: ['CMD-SHELL', 'wget -qO- http://localhost:${APP_PORT}/health || exit 1']
       interval: 10s
       timeout: 5s
       retries: 10
