--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "survey-studio",
   "version": "0.1.0",
+  "description": "A production-grade, full-stack, type-safe survey builder and management app",
+  "author": {
+    "name": "Hamid Basri",
+    "email": "dev.hamidbasri@gmail.com"
+  },
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -52,5 +57,12 @@
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
-  }
+  },
+  "engines": {
+    "bun": ">=1.0.0",
+    "npm": "0.0.0",
+    "yarn": "0.0.0",
+    "pnpm": "0.0.0"
+  },
+  "engineStrict": true
 }
