simplify Docker configuration and add bundle analyzer support with environment variable updates

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,5 @@ DB_USER=postgres
 DB_PASSWORD=postgres
 
 AUTH_SECRET=super-long-random-string-here
+NEXTAUTH_URL=http://localhost:3000
+AUTH_TRUST_HOST=true
